fix(index.html): modification des champs du formulaire
Les champs correspondent désormais aux propriété du formulaire en bdd.

--- a/api-node.js/index.html
+++ b/api-node.js/index.html
@@ -19,8 +19,18 @@
     *********************************************************************************-->
 
     <form enctype='application/json' method="post" action="/json">
-        <input type="text" name="nom">
-        <input type="text" name="nbQuestion">
+       <label>Summary</label>
+        <input type="text" name="summary">
+        <br/>
+        <br/>
+       <label>Description</label>
+        <input type="text" name="description">
+        <br/>
+        <br/>
+       <label>Title</label>
+        <input type="text" name="title">
+        <br/>
+        <br/>
         <input type="submit" value="Submit">
     </form>
 
